Improved clearfix (also applied it to floated grid elements to remove the need for overflow fix).

--- a/less/components/utility.less
+++ b/less/components/utility.less
@@ -2,20 +2,13 @@
 	clear: both;
 }
 
-.clearfix,
-.container {
-	zoom: 1;
-}
-
 .clearfix:after,
-.container:after {
-	display: block;
-	content: '';
-	width: 0;
-	height: 0;
+.container:after,
+.row:after,
+.col:after {
+	content: "";
+	display: table;
 	clear: both;
-	overflow: hidden;
-	visibility: hidden;
 }
 
 .inline {
